syntax = "proto3";
package todo;

message CreateTodoRequest {
    string userID = 1;
    string title = 2;
    string description = 3;
}

message CreateTodoResponse {
    bool success = 1;
    string message = 2;
}

message GetTodosRequest {
    string userID = 1;
}

message GetTodosResponse {
    bool success = 1;
    string message = 2;
    string data = 3;
}

service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}
    rpc GetTodos(GetTodosRequest) returns (GetTodosResponse) {}
}